--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body ng-app="quoteBook" ng-controller="mainCtrl">
 
+
+
+
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/dataService.js"></script>
+	<script type="text/javascript" src="js/mainCtrl.js"></script>
 </body>
 </html>
