Notes for adding local storage functionality

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Quote Book</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body ng-app="quoteBook" ng-controller="mainCtrl">
@@ -12,6 +13,7 @@
 		<option value="">Remove Quote</option>
 		<option value="">Filter Quotes</option>
 	</select> -->
+	
 	<button ng-click="toggleOptions('add')">Add Quote</button>
 	<button ng-click="toggleOptions('remove')">Remove Quote</button>
 	<button ng-click="toggleOptions('filter')">Filter Quotes</button>
